# kicad-hwdesign

./: .env.example  .gitignore  LICENSE  README.md  claude_desktop_config.example.json  metadata.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
core/: bridge.py  config.py  main.py
core/firmware/: device_tree_gen.py  hal_codegen.py  pin_analyzer.py
core/kicad_adapter/: __init__.py  base.py  cli_adapter.py  ipc_adapter.py  swig_adapter.py
core/layout/: footprint_gen.py  placement.py  routing.py
core/schematic/: dynamic_loader.py  netlist_extractor.py  symbol_placer.py  wire_router.py
core/search/: __init__.py  base.py  bom_integrator.py  digikey.py  lcsc.py  mouser.py
plugin/: core_launcher.py  executor.py  ipc_client.py  listener.py  plugin.py
tests/: test_e2e.py  test_layout.py  test_schematic.py  test_search.py
tests/fixtures/hierarchical/: hierarchical_main.kicad_sch  logic_subsheet.kicad_sch  output_subsheet.kicad_sch
tests/fixtures/sample_project/: complex_sample.kicad_sch  label_based_mcu.kicad_sch  sample.kicad_pro  sample.kicad_sch  voltage_divider.kicad_sch
